# chat_ui_test

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  PR_description.md  README.md  opencode.json  pyproject.toml
.code_quality/: .flake8  .pylintrc
.opencode/plans/: phase0_plan.md
migrations/: 001_initial_schema.sql  002_add_indexes.sql
scripts/: __init__.py  init_db.py
specs/: PRD.md  TECH_DEBT.md
specs/architecture/: architecture.md
specs/roadmap/: roadmap.md
specs/technical-specs/: technical-specs.md
specs/user-stories/: US-01_chat_with_multiple_providers.md  US-02_simple_username_authentication.md  US-03_chat_history_management.md  US-04_prompt_management_with_agentaai.md  US-05_optional_memory_integration.md
src/: __init__.py  bootstrap.py  main.py
src/application/: __init__.py
src/application/services/: __init__.py  session_service.py
src/application/use_cases/: __init__.py  get_system_prompt.py  load_history.py  send_message.py
src/config/: __init__.py  app.py  database.py  prompts.py  providers.py
src/domain/: __init__.py
src/domain/errors/: __init__.py  exceptions.py
src/domain/interfaces/: __init__.py  frontend_adapter.py  provider.py
src/domain/models/: __init__.py  chat_message.py  message_role.py  provider_message.py  timestamp.py  user.py
src/domain/repositories/: __init__.py  message_repository.py  user_repository.py
src/infrastructure/: __init__.py  container.py  logging.py
src/infrastructure/adapters/: __init__.py
tests/: __init__.py  conftest.py
(+25 files in other folders)
